--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Conversor de Unidades</title>
+    <script src="./scripts/script.js" defer></script>
 </head>
 <body>
     
