--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
     <script src="./scripts/script.js" defer></script>
 </head>
 <body>
-    
+    <section class="container">
+        <h1>Conversor de Unidades</h1>
+
+        <form class="form-converter">
+            
+            <section class="form-attr input-form">
+                <label for="quantity">Digite a quantidade:</label>
+                <input class="inp input-attr" type="text" id="quantity">
+            </section>
+
+            <section class="form-attr input-form">
+                <label for="of">De:</label>
+
+                <select class="inp input-attr" name="of" id="of" >
+                    <option value="meterOf">Metro(s)</option>
+                    <option value="kilometerOf">Quilômetro(s)</option>
+                    <option value="centimeterOf">Centímetro(s)</option>
+                    <option value="milimeterOf">Milímetro(s)</option>
+                </select>
+            </section>
+
+            <section class="form-attr input-form">
+                <label for="for">Para:</label>
+
+                <select class="inp input-attr" name="for" id="for">
+                    <option value="meterFor">Metro(s)</option>
+                    <option value="kilometerFor">Quilômetro(s)</option>
+                    <option value="centimeterFor">Centímetro(s)</option>
+                    <option value="milimeterFor">Milímetro(s)</option>
+                </select>
+            </section>
+
+            <button type="button" class="submit-button">Converter</button>
+
+            <section class="form-attr output-form">
+                <label for="result">Resultado:</label>
+                <input class="inp input-attr" type="text" id="result" disabled>
+            </section>
+
+        </form>
+    </section>    
 </body>
 </html>
