CVUD: FEAT - Add novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             <section class="form-attr input-form">
                 <label for="quantity">Digite a quantidade:</label>
-                <input class="inp input-attr" id="quantity" type="number" min="1">
+                <input class="inp input-attr" id="quantity" type="number" min="1" max="100000">
             </section>
 
             <section class="form-attr input-form">
@@ -46,6 +46,8 @@
                 <label for="result">Resultado:</label>
                 <input class="inp input-attr" type="text" id="result" disabled>
             </section>
+
+            <div id="inFull"></div>
 
         </form>
     </section>    
