--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt_BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <title>Conversor de Unidades</title>
     <script src="./scripts/script.js" defer></script>
 </head>
+
 <body>
     <section class="container">
         <h1>Conversor de Unidades</h1>
 
         <form class="form-converter">
-            
+
             <section class="form-attr input-form">
                 <label for="quantity">Digite a quantidade:</label>
                 <input class="inp input-attr" id="quantity" type="number" min="1">
@@ -21,7 +23,7 @@
             <section class="form-attr input-form">
                 <label for="of">De:</label>
 
-                <select class="inp input-attr" name="of" id="of" >
+                <select class="inp input-attr" name="of" id="of">
                     <option value="meterOf">Metro(s)</option>
                     <option value="kilometerOf">Quilômetro(s)</option>
                     <option value="centimeterOf">Centímetro(s)</option>
@@ -40,7 +42,8 @@
                 </select>
             </section>
 
-            <button type="button" id="submit-button" class="submit-button" onclick="converter()" disabled>Converter</button>
+            <button type="button" id="submit-button" class="submit-button" onclick="converter()"
+                disabled>Converter</button>
 
             <section class="form-attr output-form">
                 <label for="result">Resultado:</label>
@@ -50,6 +53,12 @@
             <div id="inFull"></div>
 
         </form>
-    </section>    
+    </section>
+    <section class="branding-area">
+        <a target="_blank" class="branding-text" href="https://www.linkedin.com/in/gustavodsrosa/">Meu LinkedIn</a>
+        <span class="branding-text">|</span>
+        <span class="branding-text">Feito por Gustavo Rosa</span>
+    </section>
 </body>
+
 </html>
